@@ -1,7 +1,0 @@
-Task: manual
-Section: special
-Relevance: 0
-Description: manual package selection
- Manually select packages to install in aptitude.
-Packages: manual
-Test-Debconf: false
