@@ -43,6 +43,9 @@ tasksel (3.10) UNRELEASED; urgency=low
     koffice-i18n-srlatin, thanks to Ana Guerrero (Closes: #673470).
     Indeed, koffice is being removed from the archive.
 
+  [ Bastian Blank ]
+  * Remove manual task.
+
  -- Christian Perrier <bubulle@debian.org>  Sun, 25 Mar 2012 14:52:49 +0200
 
 tasksel (3.09) unstable; urgency=low
